# Chat_Server/openapi/spec.yml
@@ -5,35 +5,87 @@ info:
 paths:
   /messages/{groupid}:
     get:
+      security:
+        - bearerAuth: []   
       parameters:
         - in: path
           name: groupid
           required: true
+          description: >
+            Group ID / Chat ID The Message Belongs To, 
+            All Searches Must Be Inside of a Group You Are Authorized To Access
           schema:
             type: string 
         - in: query
           name: limit
           required: false
+          description: >
+            "Max Amount of Messages to Query "
           schema:
             type: integer
             default: 50
             minimum: 0
         - in: query
+          name: terms 
+          required: false 
+          description: 
+            Optionally Add Search Terms To Query
+          schema:
+            type: array
+            items:
+              type: string 
+        - in: query
           name: below
           required: false
+          description: >
+            Search Above Or Below, 
+            Reccomended for loading chat to query last 25 messages (before) now, and to make API calls
+            with and without below set for cursoring around a message
           schema:
             type: boolean
             default: false
         - in: query
+          name: and
+          required: false 
+          description: >
+            By Default, Term Search Or Joined on an AND query
+            Set To False, To Search on an OR query
+          schema:
+            type: boolean 
+            default: true
+        - in: query
           name: start
           required: false
+          description: >
+            UNIX 64 TIMESTAMP for the cursor search base, this application Does Not Support Wide Range Pagination
+            To Get This Value from a message you want to inspect
           schema:
             type: integer
             minimum: 0
+        - in: query
+          name: ordered
+          description: >
+            Return "Best" Results
+            By Default, Search Results Will Be Ordered By Date, Rather Than Score 
+            However, if you wish to Use Time Priority Date (Search Closest To In Time)
+            The Cursor will be used as the weighing factor for results 
+            This is not good for scanning a wide range of messages
+          required: false 
+          schema: 
+            type: boolean
+            default : true 
+        - in: query
+          name: annum
+          description: >
+            Default 1 Year, Enter Number of Seconds To Divide by e, if 0,  will be ignored
+          required: false 
+          schema: 
+            default: 0
+            type: number 
       summary: Gets Last Messages Sent In a Chat
       responses:
         "200":
-          description: Fetching List Of articles
+          description: Fetching List Of Messages
           content:
             application/json:
               schema:
@@ -41,6 +93,8 @@ paths:
                 items:
                   $ref: "#/components/schemas/Message"
     post:
+      security:
+        - bearerAuth: []   
       parameters:
         - in: path
           name: groupid
@@ -72,6 +126,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http 
+      scheme: bearer
+      bearerFormat: jwt 
   schemas:
     Message:
       type: object
@@ -80,7 +139,7 @@ components:
           type: integer
         groupid:
           type: string
-        sendor:
+        author:
           type: string
         content:
           type: string
@@ -89,7 +148,7 @@ components:
       required:
         - id
         - groupid
-        - sendor
+        - author
         - content
         - sent_at
     MessageRequest:
@@ -104,6 +163,5 @@ components:
       required:
         - id
         - groupid
-        - sendor
         - content
         - sent_at
